Add empty mat-toolbar

--- a/seven-days-challenge/angular.json
+++ b/seven-days-challenge/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "seven-days-challenge"
+    }
+  },
+  "defaultProject": "seven-days-challenge",
+  "cli": {
+    "analytics": false
+  }
 }
